<resources>
    <string name="errorString">Could not download Quran Pages!</string>
    <string name="app_name">Quran</string>
    <string name="pageNotFound">Page not found.</string>
    <string name="pageLoading">Page Loading…</string>
    <string name="downloadPrompt_title">Download Required Files?</string>
    <string name="downloadPrompt">For optimal performance, some files must be
			downloaded.  If you choose not to do this now, each page will take
			significantly longer to load. Would you like to download the required
			files now?
		</string>
		<string name="download_connection_failed">Unable to connect to server, make sure that your Internet connection is active. Retry ?</string>
    <string name="downloadTranslationPrompt">Would you
			like to download the required translations now?</string>
    <string name="downloadPrompt_ok">Yes</string>
    <string name="downloadPrompt_no">No</string>
    <string name="downloadHighlightingData">In order to highlight ayahs during audio
        playback, we need to download some files.  Download them now?</string>
    <string name="downloading_title">Downloading&#8230;</string>
    <string name="downloading_message">Please wait for the files to download. (Resume supported)</string>
    <string name="extracting_title">Processing&#8230;</string>
    <string name="extracting_message">Please wait the files are processed.</string>
    <string name="menu_jump">Jump</string>
    <string name="menu_about">About Us</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_jump_last_page">Last page</string>
    <string name="menu_bookmarks">Bookmarks</string>
    <string name="menu_bookmarks_page">Page Bookmarks</string>
    <string name="menu_bookmarks_ayah">Ayah Bookmarks</string>
    <string name="menu_bookmarks_remove">Remove</string>
    <string name="menu_bookmarks_view">View</string>
    <string name="menu_translation">Show Translation</string>
    <string name="menu_back_to_page">Show Quran</string>
    <string name="menu_bookmarks_add">Add</string>
    <string name="menu_bookmarks_saved">Bookmark Saved</string>
    <string name="menu_bookmarks_removed">Bookmark Removed</string>
    <string name="menu_bookmarks_help">Help</string>
    <string name="menu_help">Help</string>
    <string name="menu_search">Search</string>
    <string name="menu_get_translations">Get Translations</string>
    <string name="jump_dialog_title">Jump To Page</string>
    <string name="page_hint">Page Number</string>
    <string name="refresh">Refresh</string>
    <string name="go">Go</string>
    <string name="cancel">Cancel</string>
    <string name="developedBy">		Ahmed El-Helw - Ahmed Fouad
			\nHussein Maher - Wael Nafee</string>
    <string name="copyRights">Copyright All Muslims</string>
    <string name="email_subject">Feedback</string>
    <string name="email_to">quran.android@gmail.com</string>
    <string name="send_email">Send email..</string>
    <string name="aboutUs">Quran Android is a free, open source Quran
			application for Android.  The images used are from the quran.com
			project, the audio comes from everyayah.com, 
			the data used in the translations and Arabic comes from
			tanzil.net and quran.ksu.edu.sa
			\n\nCredits:
			\n Ahmed Farra - bugfixes and many contributions.
			\n Mahmoud Hossam - bugfixes.
			\n @fo2ad - audio recitation support
			\n @wnafee - page flip animation (based on android-page-curl project)
			\n @hams_rrr - Arabic support for non-arabic phones
			\n @neo_4583 - Arabic reshaper project
			\n @somaiagabr - graphics and Arabic translation
			\n Mehmed Mahmudoglu - Turkish localization
			\n khajavi (on github) - Farsi localization
			\n Rinat (Ринат Валеев) - Russian localization
			\n\nNew features in this release:
			\n- Night mode.
			\n- Searching.
			\n- Bug fixes :) especially ICS display bug :)
			\n\nLa tansawna men saleh el doaa.</string>
    <string name="help_title">Quran Android Help</string>
    <string name="help">- Flip your screen to landscape mode for a zoomed in version.
	    \n- Change pages by swiping your finger across the screen.
	    \n- Tap the screen to get a bookmark button, a slider for switching pages and audio.
	    \n- You can fix the orientation in either landscape or portrait modes.
	    \n- Browse and download available translations (choose Menu > Get Translations).
	    \n- You can download as many translations as you want, yet only one translation
	    can be active for viewing and searching.
	    \n- Adjust translation text size to your preference via Settings.
	    \n- Initial search implementation allows you to search the active translation 
	    via the search button.
 	    \n- On tapping the center of the screen and you will find the page bookmark 
 	    option in the top left corner. 
 	    tap on the bookmark button to toggle the page bookmark state.
	    \n- You can add as many bookmarks as you\'d like.
	    \n- The application remembers the last page you were reading and displays it when you restart the app.
	    \n- Don\'t forget to check out the settings.</string>
	<string name="settings_use_arabic_names">Arabic sura names.</string>
	<string name="settings_keep_screen_on">Keep screen on.</string>
	<string name="prefs_enable_ayah_selection">enableAyahSelection</string>
	<string name="search_hint">Search the Quran</string>
	<string name="quranSearchType">Verses of the Quran</string>
    <plurals name="search_results">
        <item quantity="one">result for \"%s\": </item>
        <item quantity="other">results for \"%s\": </item>
    </plurals>
    <string name="found_in_sura">Found in Sura</string>
    <string name="no_results">No results found for \"%s\"</string>
    <string name="no_active_translation">You have no active translation set.  Please set an active translation first and then search again.</string>
    <string name="translation_settings">Translation Settings</string>
    <string name="set_active_translation">Set Active Translation</string>
    <string name="no_translations_available">You have not downloaded any translations.  Please download a translation first and then search again.</string>
    <string name="no_arabic_search_available">You have not downloaded the arabic search pack.  Please download it and try your search again.</string>
    <string name="get_arabic_search_db">Get Arabic Search Database</string>
    <string name="download_arabic_search_db">Download the Arabic Search Database to enable Arabic Searches?</string>
    <string name="prefs_category_reading">Reading Preferences</string>
    <string name="prefs_category_translation">Translation Preferences</string>
    <string name="prefs_category_display_settings">Display Settings</string>
    <string name="prefs_keep_screen_summary_on">Screen will stay on while reading</string>
    <string name="prefs_keep_screen_summary_off">Screen will turn off after idling</string>
    <string name="prefs_keep_screen_title">Keep Screen On</string>
    <string name="prefs_use_arabic_title">Arabic Mode</string>
    <string name="prefs_use_arabic_summary_on">Application will be localized to Arabic (restart required)</string>
    <string name="prefs_arabic_reshape_title">Fix Arabic text</string>
    <string name="prefs_arabic_reshape_summary">Select if your device doesn\'t support Arabic</string>
    <string name="prefs_lock_orientation_title">Lock screen orientation</string>
    <string name="prefs_lock_orientation_summary_on">Quran page will be in fixed orientation mode</string>
    <string name="prefs_lock_orientation_summary_off">Adaptive to current orientation mode</string>
    <string name="prefs_landscape_orientation_title">Landscape orientation</string>
    <string name="prefs_landscape_orientation_summary_on">Landscape orientation will be used</string>
    <string name="prefs_landscape_orientation_summary_off">Portrait orientation will be used</string>
    <string name="prefs_night_mode_title">Beta - Night mode</string>
    <string name="prefs_night_mode_summary">Dark background and light fonts will be used</string>
    <string name="prefs_display_marker_title">Display marker popups</string>
    <string name="prefs_display_marker_summary">Display popup on reaching juz\', hizb, etc.</string>
    <string name="prefs_auto_scroll_title">Auto scroll</string>
    <string name="prefs_auto_scroll_summary">Auto scroll to highlighted ayah while playing (in landscape)</string>
    <string name="prefs_active_translation_title">Active translation</string>
    <string name="prefs_active_translation_dialog_title">Select active translation</string>
    <string name="prefs_active_translation_summary">Switch between downloaded translations. Select \'Menu > Get Translations\' to display a full list of available translations</string>
    <string name="prefs_translation_text_title">Translation text size</string>
    <string name="prefs_no_translations_installed">No translations installed</string>
    <string name="prefs_translations">Translations</string>
    <string name="prefs_translations_summary">Download and manage translations</string>
    <string name="prefs_ayah_before_translation_title">Ayah before Translation</string>
    <string name="prefs_ayah_before_translation_summary">Show ayah in Arabic above the translation</string>
    <string name="prefs_category_download">Download Options</string>
    <string name="prefs_streaming_title">Streaming</string>
    <string name="prefs_streaming_summary">Stream audio when possible (non-gapless audio only).</string>
    <string name="prefs_download_amount_title">Download Amount</string>
    <string name="prefs_download_amount_summary">Preferred download amount for non-gapless audio.</string>
    <string name="loading_translations">Loading Translations List, Please wait..</string>
    <string name="downloaded_translations">Downloaded</string>
    <string name="available_translations">Available for Download</string>
    <string name="sdcard_required">SD card should be mounted to download translations.</string>
    <string name="download_a_translation">Download %s?</string>
    <string name="translation_downloaded">%s is already downloaded.</string>
    <string name="download_button">Download</string>
    <string name="remove_button">Remove</string>
    <string name="set_active">Set Active</string>
    <string name="prompt_select_ayah">Select Ayah</string>
    <string name="prompt_select_sura">Select Sura</string>
    <string name="radio_download_message">Choose download option</string>
    <string name="menu_preferences_label">Preferences</string>
    <string name="menu_dialog_label">Dialog Picker</string>
    <string name="dialog_set_number">Set</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_set">Set</string>
    <string name="dialog_hide">Hide</string>
    <string name="dialog_download">Download</string>
    <string name="dialog_stream">Stream</string>
    <string name="dialog_jump_ayah">Jump to ayah</string>
    <string name="dialog_repeat_title">Choose number of repeats</string>
    <string name="dialog_picker_title">Choose a number</string>
    <string name="prompt_select_reciter">Select Reciter</string>
	<string name="play_dialog_message">Start playing from&#8230;</string>
	<string name="play_dialog_page">Current Page (%s)</string>
	<string name="play_dialog_resume">Resume %1$s : %2$s</string>
	<string name="border">border</string>
    <string name="dialog_show_current_suras">Show current suras</string>
    <string name="dialog_play_page_start">Page beginning</string>
    <string name="dialog_play">Play</string>
    <string name="dialog_resume_play">Resume</string>
    <string name="dialog_select_reciter">Select Reciter</string>
    <string name="download_dialog_message">Choose download option</string>
    <string name="download_dialog_page">Current Page (%s)</string>
    <string name="couldNotLoadPage">Page Loading Error</string>
</resources>