<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content">
  
  <EditText android:id="@+id/page_field"
  			android:inputType="phone"
  			android:digits="1234567890"
  			android:hint="@string/page_hint"
  			android:layout_width="fill_parent"
  			android:layout_height="wrap_content" />
  <LinearLayout android:orientation="horizontal"
  				android:layout_width="fill_parent"
  				android:layout_height="wrap_content">
	<Button android:id="@+id/cancelButton"
			android:text="@string/cancel"
			android:layout_weight="1"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" />
	<Button android:id="@+id/jumpButton"
			android:text="@string/go"
			android:layout_weight="1"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" />
  </LinearLayout>
</LinearLayout>