<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="@drawable/list">

	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:linksClickable="true"
		android:id="@+id/txtDevelopedBy" android:text="@string/developedBy"
		android:textSize="12dip" android:layout_alignParentBottom="true"
		android:textColor="#FFFFFF" android:paddingLeft="10dip" />

	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:linksClickable="true"
		android:id="@+id/txtCopyRights" android:text="@string/copyRights"
		android:textSize="12dip" android:layout_above="@id/txtDevelopedBy"
		android:textColor="#FFFFFF" android:paddingLeft="10dip" />

	<Button android:layout_width="300dip" android:id="@+id/btnEmailUs"
		android:layout_height="wrap_content" android:text="Email Quran Android"
		android:layout_centerHorizontal="true" android:layout_above="@id/txtCopyRights"
		android:visibility="visible" />

	<TextView android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:visibility="visible"
		android:textAppearance="?android:attr/textAppearanceSmall"
		android:textColor="#FFFFFF" android:textStyle="bold" android:id="@+id/txtAbout"
		android:singleLine="false" android:scrollbarAlwaysDrawVerticalTrack="true"
		android:scrollbars="vertical" android:text="@string/aboutUs"
		android:layout_above="@id/btnEmailUs" android:padding="10dip"
		android:lineSpacingExtra="4dip" />

</RelativeLayout>